--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,9 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - 'ubuntu-18.04'
-          - 'windows-2019'
-          - 'macos-10.15'
+          - 'ubuntu-latest'
+          - 'windows-latest'
+          - 'macos-latest'
         python-version:
           - '3.7'
           - '3.8'
