--- a/.github/workflows/badge.yml
+++ b/.github/workflows/badge.yml
@@ -12,7 +12,11 @@ jobs:
       matrix:
         python-version: [ 3.7 ]
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 20
+          submodules: 'recursive'
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
