--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: Code Test
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   unittest:
@@ -55,6 +55,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 20
+          submodules: 'recursive'
       - name: Set up system dependences on Linux
         if: ${{ env.OS_NAME == 'Linux' }}
         shell: bash
