--- a/.github/workflows/badge.yml
+++ b/.github/workflows/badge.yml
@@ -8,6 +8,7 @@ jobs:
   update-badges:
     name: Update Badges
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
     strategy:
       matrix:
         python-version: [ 3.7 ]
