--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Run unittest
         env:
           CI: 'true'
-          CPU_COUNT: '6'
+          NO_GFW: 'true'
         shell: bash
         run: |
           make unittest IS_WIN=${{ env.IS_WIN }} IS_MAC=${{ env.IS_MAC }}
